src/unreferenced_files/tests/multiple_searching/snapshots/unreferenced_files__unreferenced_files__tests__multiple_searching__found.snap
---
source: src/unreferenced_files/tests/multiple_searching/mod.rs
expression: sorted_unreferenced_files

---
[]
