src/unreferenced_files/tests/multiple_searching/snapshots/unreferenced_files__unreferenced_files__tests__multiple_searching__multiple_not_found.snap
---
source: src/unreferenced_files/tests/multiple_searching/mod.rs
expression: sorted_unreferenced_files

---
[
    FilePathVariants {
        file_canonicalize_path: "/tmp/folder/file1.txt",
        file_relative_path: "./folder/file1.txt",
        file_name: "file1.txt",
        file_stem: "file1",
    },
    FilePathVariants {
        file_canonicalize_path: "/tmp/folder/file2.txt",
        file_relative_path: "./folder/file2.txt",
        file_name: "file2.txt",
        file_stem: "file2",
    },
]
