src/unreferenced_files/tests/multiple_searching/snapshots/unreferenced_files__unreferenced_files__tests__multiple_searching__not_found.snap
---
source: src/unreferenced_files/tests/multiple_searching/mod.rs
expression: sorted_unreferenced_files
---
[
    FilePathVariants {
        file_canonicalize_path: "/tmp/folder/file1.txt",
        file_relative_path: "./folder/file1.txt",
        file_name: "file1.txt",
        file_stem: "file1",
    },
]
